Fix uneven paddings on quote section

--- a/app/styles/main.scss
+++ b/app/styles/main.scss
@@ -407,6 +407,9 @@ $icon-font-path: "../bower_components/bootstrap-sass-official/assets/fonts/boots
   background: #242728;
   color: #fff;
 }
+  .quote__title {
+    margin-top: 5px;
+  }
 
   .quote__divider {
     margin: 2em auto;
